# assignments

semester10/proglang2/: spyex4-5.cpp
semester10/proglang2/ex4-5/: CMakeLists.txt  ex4-5.cpp
semester10/proglang2/ex4-5/include/custom/: heap.hpp  instructions.hpp  view_adaptors.hpp
semester10/proglang2/ex6/: read_typeinfer  read_typeinfer.hi  read_typeinfer.hs
semester3/discrete/assignment2/: assignment.aux  assignment.cls  assignment.tex  assignment2.tex
semester3/discrete/assignment3/: assignment.cls  assignment.tex
semester3/introcs/assignment2/: HaskellTemp.hs  assignment.aux  assignment.cls  assignment.tex
semester3/introcs/assignment3/: asm1.asm  asm2.asm  asm3.asm  asm4.asm  asm5.asm  asm6.asm
semester3/shmata-susthmata/assignment3/: assignment.aux  assignment.cls  assignment.tex  test.tex
semester5/comparch/series1/: assignment.aux  assignment.tex  exercise1.asm  exercise2.asm  exercise3.asm  test
semester5/comparch/series2/: assignment.aux  assignment.tex  assignment2.cls
semester5/comparch/series3/: assignment.aux  assignment.cls  assignment.dvi  assignment.tex
semester5/hlektronikh/exercise1/: exercise1.tex
semester6/digital-processing/assignment1/: assignment.tex
semester6/digital-processing/assignment2/: assignment.tex
semester6/graphs/assignment1/: assignment.tex
semester6/graphs/assignment2/: assignment.tex
semester6/graphs/assignment3/: assignment.aux  assignment.tex
semester6/languages1/assigment1/: ex1  ex1.cpp  ex2  ex2.cpp  ex2.mlb  ex2.sml  ex3.cpp  mlmon.out  test  (+4 more)
semester7/db/: assignment.aux  assignment.tex
(+214 files in other folders)
